--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "fast-average-color": "^6.0.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.2.2",
     "react": "16.13.0",
     "react-dom": "16.13.0"
