--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "dotenv-webpack": "^1.7.0",
     "fast-average-color": "^6.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "mongodb": "^3.5.4",
     "next": "9.2.2",
     "next-connect": "^0.6.0",
+    "nodemailer": "^6.4.4",
     "react": "16.13.0",
     "react-dom": "16.13.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
