--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "fast-average-color": "^6.0.1",
     "isomorphic-unfetch": "^3.0.0",
@@ -19,8 +20,5 @@
     "nodemailer": "^6.4.4",
     "react": "16.13.0",
     "react-dom": "16.13.0"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
   }
 }
